# ida-fusion-mcp

./: .gitignore  LICENSE  README.md  pyproject.toml  pytest.ini
docs/: README.md  benchmark-report.md  installation.md
docs/ida-pro-mcp/: comparison.md
docs/ops/: ROADMAP.md
docs/superpowers/specs/: 2026-06-15-router-native-idalib-design.md
scripts/: benchmark.py
src/ida_fusion_mcp/: __main__.py  cache.py  filelock.py  health.py  ida_tool_schemas.json  idalib_manager.py  idalib_worker.py  instance_id.py  registry.py  router.py  server.py
src/ida_fusion_mcp/ida_mcp/: __init__.py  api_analysis.py  api_core.py  api_debug.py  api_memory.py  api_modify.py  api_python.py  api_resources.py  api_stack.py  api_survey.py  api_types.py  compat.py  framework.py  http.py  rpc.py  sync.py  utils.py
src/ida_fusion_mcp/ida_mcp/zeromcp/: jsonrpc.py
src/ida_fusion_mcp/plugin/: __init__.py  ida_fusion_mcp.py  ida_fusion_mcp_loader.py  registration.py
src/ida_fusion_mcp/tools/: __init__.py  idalib.py  management.py
